WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115674
Flaky Test: fast/frames/crash-remove-iframe-during-object-beforeload.html
https://bugs.webkit.org/show_bug.cgi?id=115674
Summary
Flaky Test: fast/frames/crash-remove-iframe-during-object-beforeload.html
Andreas Kling
Reported
2013-05-06 14:09:46 PDT
There's a goofy crash in Document::implicitClose() sometimes. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000104e1d627 WebCore::Document::implicitClose() + 1063 (Document.cpp:2467) 1 com.apple.WebCore 0x00000001050acc2b WebCore::FrameLoader::checkCallImplicitClose() + 155 (FrameLoader.cpp:827) 2 com.apple.WebCore 0x00000001050ac8a6 WebCore::FrameLoader::checkCompleted() + 358 (FrameLoader.cpp:771) 3 com.apple.WebCore 0x00000001050ab4f8 WebCore::FrameLoader::finishedParsing() + 184 (FrameLoader.cpp:704) 4 com.apple.WebCore 0x0000000104e28923 WebCore::Document::finishedParsing() + 531 (Document.cpp:4454) 5 com.apple.WebCore 0x000000010520feac WebCore::HTMLConstructionSite::finishedParsing() + 28 (HTMLConstructionSite.cpp:346) 6 com.apple.WebCore 0x0000000105306040 WebCore::HTMLTreeBuilder::finished() + 144 (HTMLTreeBuilder.cpp:2924) 7 com.apple.WebCore 0x00000001052307a6 WebCore::HTMLDocumentParser::end() + 230 (HTMLDocumentParser.cpp:757) 8 com.apple.WebCore 0x000000010522f11a WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() + 298 (HTMLDocumentParser.cpp:768) 9 com.apple.WebCore 0x000000010522eeeb WebCore::HTMLDocumentParser::prepareToStopParsing() + 299 (HTMLDocumentParser.cpp:212) 10 com.apple.WebCore 0x00000001052307f3 WebCore::HTMLDocumentParser::attemptToEnd() + 67 (HTMLDocumentParser.cpp:780) 11 com.apple.WebCore 0x0000000105230848 WebCore::HTMLDocumentParser::finish() + 72 (HTMLDocumentParser.cpp:829) 12 com.apple.WebCore 0x0000000104e95fd2 WebCore::DocumentWriter::end() + 402 (DocumentWriter.cpp:249) 13 com.apple.WebCore 0x0000000104e648a3 WebCore::DocumentLoader::finishedLoading(double) + 595 (DocumentLoader.cpp:402) 14 com.apple.WebCore 0x0000000104e645c6 WebCore::DocumentLoader::notifyFinished(WebCore::CachedResource*) + 326 (DocumentLoader.cpp:344) 15 com.apple.WebCore 0x0000000104b4316e WebCore::CachedResource::checkNotify() + 126 (CachedResource.cpp:366) 16 com.apple.WebCore 0x0000000104b431e5 WebCore::CachedResource::data(WTF::PassRefPtr<WebCore::ResourceBuffer>, bool) + 69 (CachedResource.cpp:376) 17 com.apple.WebCore 0x0000000104b3ce29 WebCore::CachedRawResource::data(WTF::PassRefPtr<WebCore::ResourceBuffer>, bool) + 697 (CachedRawResource.cpp:71) 18 com.apple.WebCore 0x0000000106276e8e WebCore::SubresourceLoader::didFinishLoading(double) + 542 (SubresourceLoader.cpp:282) 19 com.apple.WebCore 0x0000000106057a75 WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*, double) + 53 (ResourceLoader.cpp:501)
Attachments
Patch
(2.86 KB, patch)
2013-05-06 14:13 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-05-06 14:13:31 PDT
Created
attachment 200810
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-06 16:19:59 PDT
The commit-queue encountered the following flaky tests while processing
attachment 200810
[details]
: svg/batik/filters/feTile.svg
bug 114375
(authors:
krit@webkit.org
and
zimmermann@kde.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2013-05-06 16:20:51 PDT
Comment on
attachment 200810
[details]
Patch Clearing flags on attachment: 200810 Committed
r149648
: <
http://trac.webkit.org/changeset/149648
>
WebKit Commit Bot
Comment 4
2013-05-06 16:20:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug