Flaky Test: fast/frames/crash-remove-iframe-during-object-beforeload.html <http://webkit.org/b/115674>

Reviewed by Alexey Proskuryakov.

Don't cache the Document::renderer() in a local since layout may blow it away.

* dom/Document.cpp:
(WebCore::Document::implicitClose):


Canonical link: https://commits.webkit.org/134111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149648 268f45cc-cd09-0410-ab3c-d52691b4dbfc